[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = true
reverse_relative = true

[project]
name = "pygraft"
authors = [{name = "Nicolas Hubert", email = "nicolas.hubert@univ-lorraine.fr"}]
dynamic = ["version", "description"]